--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ colour : blue;
 h2{ font-family : comic sans;
 colour:blue;
 p{
-font-family:comic sans;
+font-family:verdana;
 }
 body{
   background-colour: #https://cdn.pixabay.com/photo/2017/07/29/10/14/background-2551051_960_720.jpg
