--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 <DOCTYPE html>
 <html>
+<body>
+<link rel="https://github.com/dhscharmainelam/dhscharmainelam/blob/master/README.md" href="/style.css"/>
 h1{
 font-family : comic sans;
 colour : blue;
