--- a/style.css
+++ b/style.css
@@ -10,6 +10,6 @@ p{
 font-family:verdana;
 }
 body{
-  background-colour: #https://cdn.pixabay.com/photo/2017/07/29/10/14/background-2551051_960_720.jpg
+  background-colour: #b3ffff 
   }
 </html>
